--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/moneybook
+#https://stackoverflow.com/questions/53131321/spring-boot-jdbc-javax-net-ssl-sslexception-closing-inbound-before-receiving-p
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/moneybook?useSSL=false
 spring.datasource.username=moneybook
 spring.datasource.password=money1234
-spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
+
+# https://stackoverflow.com/questions/30549489/what-is-this-spring-jpa-open-in-view-true-property-in-spring-boot
+spring.jpa.open-in-view=false
